--- a/files/settings.json
+++ b/files/settings.json
@@ -1,1 +1,1 @@
-{"hash": "files/hash.txt", "bin": "files/bin.txt", "last_symbols": "files/last_symbols", "output": "files/output/output.txt", "card_number": "files/card_number", "plot_img": "files/output", "time_statistic": "files/output/time_statistic.csv"}
+{"hash": "files/hash.txt", "bin": "files/bin.txt", "last_symbols": "files/last_symbols.txt", "output": "files/output/output.txt", "card_number": "files/card_number.txt", "plot_img": "files/output/plot_img.jpg", "time_statistic": "files/output/time_statistic.csv"}
